deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xiaoguai
  labels:
    app.kubernetes.io/name: xiaoguai
    app.kubernetes.io/component: core
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: xiaoguai
